# httui

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  go.mod  go.sum  package-lock.json  package.json
httui-core/: Cargo.toml
httui-core/migrations/: 009_block_run_history.sql  012_block_run_history_plan.sql  013_schema_cache_drop_fk.sql  014_block_results_alias.sql
httui-core/src/: block_examples.rs  block_results.rs  block_settings.rs  captures_cache.rs  connection_uses.rs  dotenv.rs  lib.rs  references.rs  run_bodies.rs  runner.rs  tag_index.rs  templates.rs  var_uses.rs  vaults.rs
httui-core/src/block_history/: mod.rs  summary.rs  types.rs
httui-core/src/blocks/: db_export.rs  http_codegen.rs  http_normalize.rs  mod.rs  parser.rs  serializer.rs
httui-core/src/db/: chat.rs  connections.rs  driver.rs  environments.rs  keychain.rs  lookup.rs  mod.rs  pool.rs  pool_exec_mysql.rs  pool_exec_pg.rs  pool_exec_sqlite.rs  pool_manager.rs  query_error.rs  schema_cache.rs  schema_cache_remote.rs  sql_scanner.rs
httui-core/src/executor/db/: mod.rs  types.rs
httui-core/src/executor/http/: mod.rs  request.rs  types.rs
httui-core/src/explain/: mod.rs  mongo.rs  mysql.rs  node.rs  postgres.rs  prefix.rs
httui-core/src/frontmatter/: mod.rs  parser.rs
httui-core/src/fs/: mod.rs
httui-core/src/git/: checkout.rs  clone.rs  conflict.rs  log.rs  mod.rs  remote.rs  remote_host.rs  staging.rs  status.rs  sync.rs
httui-core/src/preflight/: evaluator.rs  io_evaluator.rs  mod.rs  parser.rs
httui-core/src/secrets/: mod.rs  parser.rs
httui-core/src/vault_config/: atomic.rs  connection_traits.rs  connection_views.rs  connections.rs  connections_store.rs  create.rs  environments_store.rs  envs.rs  error.rs  migration.rs  missing_secrets.rs  mod.rs  scaffold.rs  secret_resolver.rs  tui_view.rs  user.rs  user_store.rs  validate.rs  workspace.rs  workspace_store.rs
httui-core/src/vault_config/environments_store/: dto.rs  mod.rs
httui-desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json  tauri.windows.conf.json
httui-desktop/src-tauri/src/: captures_commands.rs  executions.rs  git_commands.rs  lib.rs  lsp_sidecar.rs  main.rs  preflight_commands.rs  run_body_commands.rs  tag_commands.rs  templates_commands.rs  terminal_launcher.rs  vault_config_commands.rs
httui-desktop/src-tauri/src/chat/: commands.rs  permissions.rs  protocol.rs  sidecar.rs
httui-desktop/src-tauri/src/commands/: blocks.rs  connections.rs  environments.rs  files.rs  mod.rs  schema.rs  settings.rs  vault_stores.rs
httui-desktop/src-tauri/src/fs/: watcher.rs
httui-launcher/: Cargo.toml
httui-launcher/src/: dispatch.rs  main.rs
httui-launcher/tests/: integration.rs
httui-mcp/: Cargo.toml
httui-mcp/src/: main.rs  server.rs
httui-mcp/src/tools/: blocks.rs  connections.rs  environments.rs
httui-tui/: Cargo.toml
httui-tui/src/: app.rs  block_hydrate.rs  cli.rs  clipboard.rs  config.rs  document_loader.rs  event.rs  main.rs  pane.rs  pane_tabs.rs  pane_tests.rs  persist.rs  persist_tests.rs  ref_preview.rs  schema.rs  session_overrides.rs  sql_completion.rs  terminal.rs  tree.rs  vault.rs
httui-tui/src/app/: autosave.rs  block_badges.rs  blocks_view.rs  event_loop.rs  helpers.rs  impl_accessors.rs  impl_file_crud.rs  impl_file_tab.rs  impl_lifecycle.rs  impl_schema.rs  mod.rs  modal_state.rs  picker_state.rs  result_tab.rs  running.rs  settings_page.rs  standard_state.rs  status.rs  tabbar.rs  viewport.rs
httui-tui/src/buffer/: autopairs.rs  block.rs  document.rs  layout.rs  mod.rs  viewport2d.rs
httui-tui/src/buffer/document/: edit.rs  helpers.rs  mod.rs  undo.rs
httui-tui/src/commands/: db.rs  http.rs  mod.rs  refs.rs  search.rs
httui-tui/src/commands/db/: export_picker.rs  history.rs  mod.rs  result.rs  run.rs  settings_modal.rs  sql.rs  tests.rs
httui-tui/src/commands/git/: mod.rs
httui-tui/src/commands/http/: cache.rs  codegen.rs  history.rs  mod.rs  refs.rs  result.rs
httui-tui/src/empty_state/: mod.rs  render.rs  state.rs
httui-tui/src/git/: mod.rs  template.rs
httui-tui/src/input/: action.rs  block_swap.rs  dispatch.rs  keychord.rs  keymap.rs  map.rs  mod.rs  route.rs  scope.rs  standard.rs  types.rs
httui-tui/src/input/apply/: blocks_view.rs  completion.rs  connection_form.rs  connection_picker.rs  env_activate.rs  env_picker.rs  envs_clone.rs  envs_page.rs  envs_page_tests.rs  git_branch_picker.rs  git_conflict_resolver.rs  git_log_page.rs  git_panel.rs  git_share.rs  misc.rs  misc_tests.rs  mod.rs  modal_detail.rs  navigation.rs  operator.rs  pickers.rs  replay.rs  settings_page.rs  settings_page_tests.rs  slash.rs  standard_delete.rs  standard_sel.rs  standard_undo.rs  tree_nav.rs  vault_modals.rs  window.rs
httui-tui/src/input/parser/: git_panel.rs  insert.rs  lineedit.rs  mod.rs  modals.rs  normal.rs  visual.rs
httui-tui/src/modal/: blocks_view_handler.rs  clone_form.rs  detail.rs  git.rs  handlers.rs  mod.rs  settings_handler.rs  tests.rs  util.rs
httui-tui/src/sql_completion/: keywords.rs  mod.rs  refs.rs
httui-tui/src/ui/: anchor.rs  block_history.rs  block_template_picker.rs  blocks.rs  blocks_unsaved_prompt.rs  completion_popup.rs  confirm_prompt.rs  connection_delete_confirm.rs  connection_form.rs  connection_picker.rs  connections_page.rs  content_search.rs  cursor.rs  db_confirm_run.rs  db_export_picker.rs  db_row_detail.rs  db_settings_modal.rs  document.rs  document_tests.rs  environment_picker.rs  envs_clone.rs  envs_page.rs  fence_edit.rs  git_branch_picker.rs  git_conflict_resolver.rs  git_log_page.rs  git_panel.rs  git_panel_form.rs  git_panel_history.rs  git_set_upstream_confirm.rs  help.rs  http_response_detail.rs  mod.rs  overlay.rs  overlay_tests.rs  palette.rs  pane_tree.rs  prose.rs  quickopen.rs  ref_preview.rs  (+15 more)
httui-tui/src/ui/blocks/: db_chrome.rs  db_table.rs  db_table_tests.rs  http_panel.rs  (+3 more)
httui-tui/src/vault/: helpers.rs  mod.rs
httui-tui/src/vim/: dispatch.rs  ex.rs  insert.rs  keybindings.rs  mod.rs  mode.rs  motions.rs  operator.rs  parser.rs  state.rs
(+757 files in other folders)
