[package]
name = "httui-core"
description = "Shared core for httui (executors, DB, references, secrets)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "postgres", "mysql", "runtime-tokio", "tls-rustls", "json", "chrono", "bigdecimal", "uuid"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
base64 = "0.22"
trash = "5"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
sha2 = "0.11"
tokio-util = "0.7"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "2"
toml = "1.1"
regex = "1"
once_cell = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
