[package]
name = "httui-launcher"
description = "Unified `httui` command: dispatches to the TUI by default, to the desktop app on `httui desktop`"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "httui"
path = "src/main.rs"

[dependencies]
