[package]
name = "httui-mcp"
description = "MCP server exposing httui notes/connections/environments to LLM agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
httui-core = { git = "https://github.com/httuicom/httui-core", rev = "6e2f97db9f3201d931c59fe1c4da93904355f73f" }
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["sqlite", "runtime-tokio"] }
schemars = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
