[package]
name = "httui-tui"
description = "Terminal UI for httui — vim-style editor with executable blocks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "notes-tui"
path = "src/main.rs"

[dependencies]
httui-core = { path = "../httui-core" }
ropey = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tree-sitter = "0.26"
tree-sitter-sequel = "0.3"
arboard = "3"
chrono = "0.4"
notify = "8"

[dev-dependencies]
tempfile = "3"
