[package]
name = "httui-notes"
description = "httui desktop app — markdown editor with executable HTTP/DB blocks"
# `version` stays literal here: tauri's release pipeline syncs it from the
# release tag via sed (see .github/workflows/release.yml). Workspace
# inheritance would break that pattern.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[package.metadata.httui]
# Read by scripts/prepare-bundle-bins.sh.
lang-version = "0.2.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
httui-core = { git = "https://github.com/httuicom/httui-core", rev = "c331047ae6812125653633f651a7cdb05ad79d41" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
notify = "8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
regex = "1"
hmac = "0.13"
sha2 = "0.11"
tokio-util = "0.7"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
